Attach garethr/snyk-to-sarif@master to create snyk.sarif

--- a/.github/workflows/snyk-infrastructure-analysis.yml
+++ b/.github/workflows/snyk-infrastructure-analysis.yml
@@ -41,6 +41,11 @@ jobs:
           # For example `deployment.yaml` for a Kubernetes deployment manifest
           # or `main.tf` for a Terraform configuration file
           file: your-file-to-test.yaml
+      - uses: garethr/snyk-to-sarif@master
+      - uses: actions/upload-artifact@v2
+        with:
+          name: SARIF
+          path: snyk.sarif
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v1
         with:
