--- a/.github/workflows/snyk-infrastructure-analysis.yml
+++ b/.github/workflows/snyk-infrastructure-analysis.yml
@@ -40,9 +40,8 @@ jobs:
           # Add the path to the configuration file that you would like to test.
           # For example `deployment.yaml` for a Kubernetes deployment manifest
           # or `main.tf` for a Terraform configuration file
-          file: your-file-to-test.yaml
+          file: setup.py
           json: true
-      - uses: garethr/snyk-to-sarif@master
       - uses: actions/upload-artifact@v2
         with:
           name: SARIF
