--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Flask-Session>=0.8.0
 Bootstrap-Flask>=2.4.0
 werkzeug>=3.0.3
 PyYAML
-OpenVAS-Reporting>=1.6.0
+OpenVAS-Reporting
 defusedxml
 pydash
