--- a/setup.cfg
+++ b/setup.cfg
@@ -31,12 +31,13 @@ classifiers =
 include_package_data = True
 packages = find:
 install_requires =
-    Flask>=2.0.2
-    Flask-Session>=0.4.0
-    Bootstrap-Flask>=1.8.0
-    PyYAML>=6.0
+    Flask>=3.0.3
+    Flask-Session>=0.8.0
+    Bootstrap-Flask>=2.4.0
+    PyYAML
     OpenVAS-Reporting>=1.5.2
-    defusedxml>=0.7.1
+    defusedxml
+    pydash
 python_requires = >=3.9
 
 [options.entry_points]
