--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ install_requires =
     Flask>=3.0.3
     Flask-Session>=0.8.0
     Bootstrap-Flask>=2.4.0
+    python-gvm
+    markupsafe
     PyYAML
     OpenVAS-Reporting>=1.5.2
     defusedxml
